...
  render() {
    return (
      <View style={styles.container}>
        <View style={styles.controlContainer}>
          <View style={styles.textInputContainer}>
            <TextInput
              testID="search-input"
              style={styles.searchInput}
              onChangeText={text => this.setState({ searchText: text })}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button testID="search-button" onClick={this.onSearch}>
              SEARCH
            </Button>
          </View>
        </View>
        <View style={styles.listContainer}>
          <List data={this.state.data} onItemClick={this.gotoCharacterScreen} />
...
